// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) AssemblyEditorModal — dark 1`] = `
{
  "lines": 119,
  "modalCount": 1,
  "sha256": "52a89ce78ba9a057d901dcb58fa9168e73bfbf74370b4bdfd72bb3707b677cb5",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) AssemblyEditorModal — light 1`] = `
{
  "lines": 119,
  "modalCount": 1,
  "sha256": "dfcd3eabb7dff9c3d7bbc228c38c0ae5a7ca99316859fed16d7b9ad659826f86",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) ConfirmEmailModal (confirmed elsewhere) — dark 1`] = `
{
  "lines": 16,
  "modalCount": 1,
  "sha256": "4eb8fddb1c6a74cb7f0d999c8185461a71e3b3bdee02a7bc896f3adcf1be61f1",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) ConfirmEmailModal (confirmed elsewhere) — light 1`] = `
{
  "lines": 16,
  "modalCount": 1,
  "sha256": "b8ec9a11be51bf95bf29b591a36cd77f22a1f763a0cdf7d7967107a2101614b6",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) ConfirmEmailModal — dark 1`] = `
{
  "lines": 60,
  "modalCount": 1,
  "sha256": "cbe9176f9bb64f64f63f2742e05887ffb643d352361536ea99a8b8d9642fa981",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) ConfirmEmailModal — light 1`] = `
{
  "lines": 60,
  "modalCount": 1,
  "sha256": "ff512413f2ffa6a7ecab3473b704223d0b37e2a9586d474923870a05c1a17865",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) EstimateLoadingOverlay — dark 1`] = `
{
  "lines": 46,
  "modalCount": 1,
  "sha256": "f1ae4612a417c4dbcb08bd268940221731e1dbef2e35629c993434c259cf94fc",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) EstimateLoadingOverlay — light 1`] = `
{
  "lines": 46,
  "modalCount": 1,
  "sha256": "c17946a1c413d4808608bfa1d03b4be85da142d0876778c1a9afcbf3f5f091ec",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) InfoBubble — dark 1`] = `
{
  "lines": 27,
  "modalCount": 1,
  "sha256": "8e7bfe8b263a241c8ffdc9a5fddaae38c6df2e82ef5922ff42bc2deeccb78199",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) InfoBubble — light 1`] = `
{
  "lines": 27,
  "modalCount": 1,
  "sha256": "ecb2c1dafd9861810642c05072a74e21eb61552f53d5caec714bf5ea2e890373",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) InstantBidProposalModal — dark 1`] = `
{
  "lines": 46,
  "modalCount": 1,
  "sha256": "a958f796ae16ca2341468341d9ee3ad87eedf7cdc5df21aed015c32cba5abf46",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) InstantBidProposalModal — light 1`] = `
{
  "lines": 46,
  "modalCount": 1,
  "sha256": "809a63a21a6897c27267e840f6815f7afd231c8129749fd55561cfee137a74dc",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) OfflineSyncPill (failed) — dark 1`] = `
{
  "lines": 52,
  "modalCount": 1,
  "sha256": "6adee350d029dffba465f2f1f7305e4691984e2e78ed2d10469be23c3eab2653",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) OfflineSyncPill (failed) — light 1`] = `
{
  "lines": 52,
  "modalCount": 1,
  "sha256": "4597be8d31451f777b1a4d301d76d4a86550b19e2a387304003b72f65798f139",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) PropertyManagerHome — dark 1`] = `
{
  "lines": 106,
  "modalCount": 1,
  "sha256": "49b1923b22fcbd7f95fcf2c6c36a2b0ab75bb26af46a4112013a9bdeecfbe6ed",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) PropertyManagerHome — light 1`] = `
{
  "lines": 106,
  "modalCount": 1,
  "sha256": "dcf0dd7ef2c7a3107d2a62c2cc642c4096f6a86b5b23e30e466c6ae8747307d7",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) PunchExportSheet — dark 1`] = `
{
  "lines": 84,
  "modalCount": 1,
  "sha256": "7f6260392165ec3a95260d09ac3d38939b04a2d26049da86e5649c2602434316",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) PunchExportSheet — light 1`] = `
{
  "lines": 84,
  "modalCount": 1,
  "sha256": "a16b29a6a314417304872e5ff44b79b8f316e3dce50bba3a7f0985f000d5c77a",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) QuickFieldUpdate — dark 1`] = `
{
  "lines": 181,
  "modalCount": 2,
  "sha256": "2717acd56fba6c19f9340202dde0fe1ba9767cc59f579d0e5c7a5121ec687aaf",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) QuickFieldUpdate — light 1`] = `
{
  "lines": 181,
  "modalCount": 2,
  "sha256": "c968a3cdc47dd29b115dbec83aae9b2541af90ee8528d7f5a42888bc04a090a4",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) RateOverrideModal — dark 1`] = `
{
  "lines": 55,
  "modalCount": 1,
  "sha256": "ae16ec93d5187415ec3035c545c1a6d83f377011c58573df91815f571c295ca6",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) RateOverrideModal — light 1`] = `
{
  "lines": 55,
  "modalCount": 1,
  "sha256": "3084f01b82ea9fd58dd4c6b1d84564064f5f9d9cebce7b150be2b1be4eb3a8c4",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) ReferralPrompt — dark 1`] = `
{
  "lines": 40,
  "modalCount": 1,
  "sha256": "9d1ff302c941e6e582d394cb6de0d1e30fe0a761c58870faccd5ba65754af1ac",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) ReferralPrompt — light 1`] = `
{
  "lines": 40,
  "modalCount": 1,
  "sha256": "dd3f87edce332c195a101fa9fb329f1443a27ab91e90f3c06e57234fa9a3413f",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) SubDailyUpdateModal — dark 1`] = `
{
  "lines": 117,
  "modalCount": 1,
  "sha256": "0bc4f9a20953c716a9b50cbbfebec1dd4238ab1e25c232859b4da3b86c3b546f",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) SubDailyUpdateModal — light 1`] = `
{
  "lines": 117,
  "modalCount": 1,
  "sha256": "a30d5a9a12c80a8f556e2d8d4aafc2707f136fc3ac619143e753fd4f90a3aa7b",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) TakeoffFieldVerifyButton (existing) — dark 1`] = `
{
  "lines": 47,
  "modalCount": 1,
  "sha256": "c676ae6711e23be0eb0f0a67e314e2edaf09ce30afd732ff020ec7f8a0eb1ed2",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) TakeoffFieldVerifyButton (existing) — light 1`] = `
{
  "lines": 47,
  "modalCount": 1,
  "sha256": "ff503482567269044d1a5697c50936eda2370e948dc511a5b7ebc2c1aa45738c",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) TakeoffFieldVerifyButton (new) — dark 1`] = `
{
  "lines": 35,
  "modalCount": 1,
  "sha256": "f9e04323dfe72015410f7e6824c11e54cba5adfda35f28a56bff03da348804a6",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) TakeoffFieldVerifyButton (new) — light 1`] = `
{
  "lines": 35,
  "modalCount": 1,
  "sha256": "c8ab9b936e18b9d37946bd58bca499b9ad86bfe862673d6b3c5b04727ff36ea3",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) UniversalMicButton — dark 1`] = `
{
  "lines": 87,
  "modalCount": 2,
  "sha256": "9d346b7016ab32ac5c5f8076e57dc65cc12530669e2cb969c041107ec732e060",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) UniversalMicButton — light 1`] = `
{
  "lines": 87,
  "modalCount": 2,
  "sha256": "1d18ce2386d2130a17ab6c7e12a3067221853bf023ff6784f6523063638213c3",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) UpgradeSheet — dark 1`] = `
{
  "lines": 42,
  "modalCount": 1,
  "sha256": "5d506ad47abc64d7d332b4eaffc0069014ec92da4d54bd3388840179d7b33445",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) UpgradeSheet — light 1`] = `
{
  "lines": 42,
  "modalCount": 1,
  "sha256": "53401a06e227f220a26cabeafeda2437db15dc14795e11fe4a6bcec889ba3550",
}
`;

exports[`lane X1 — D: the classic schedule tab (golden, android 800 × 1280) /(tabs)/schedule?projectId — ScheduleScreen's non-desktop branch 1`] = `
{
  "lines": 2194,
  "modalCount": 19,
  "sha256": "ccecb7b27358ca76b82492542e226cc88f6854bfbf459696189562fd40f88dda",
}
`;

exports[`lane X1 — PunchExportHeaderButton alone (golden, iOS 390) dark — the phone label stays "Export" 1`] = `
{
  "lines": 11,
  "modalCount": 0,
  "sha256": "88ff5fef7ea44af42d4381b852c317927a9ba02816207d52bb6b827c962b1605",
}
`;

exports[`lane X1 — PunchExportHeaderButton alone (golden, iOS 390) light — the phone label stays "Export" 1`] = `
{
  "lines": 11,
  "modalCount": 0,
  "sha256": "b0fc30a0fb3422a468493c2294cbabae1036fbcbfd4cbcd1a2cf7f4257dc4511",
}
`;
